Fixed overlapping

--- a/style.css
+++ b/style.css
@@ -8,9 +8,10 @@
 
 
 #settings {
+    position: relative;
     background-color: white;
     box-shadow: 0 0 4px var(--primary-color);
-    z-index: 10;
+    z-index: 100;
 }
 
 #intro-block {
